Refractor: Reduced API alls on search + end.html added

--- a/wwwroot/mobile.html
+++ b/wwwroot/mobile.html
@@ -9,6 +9,7 @@
 <body>
     <div class="mobile-container">
         <!-- Búsqueda -->
+        
         <div class="search-box">
             <input type="search" 
                    id="search" 
@@ -16,6 +17,8 @@
                    placeholder="Buscar canciones..."
                    autocomplete="off">
         </div>
+        <button class= "add-button" id="searchButton">Buscar</button>
+        <div id="searchResults"></div>
 
         <!-- Resultados de búsqueda -->
         <div class="search-results" id="searchResults"></div>
